--- a/index.html
+++ b/index.html
@@ -5,282 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>LiteraTeia - Grupo de Leitura</title>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;700&family=Merriweather:wght@300;400;700&display=swap" rel="stylesheet">
-    <style>
-        :root {
-            --primary-color: #1A5F7A;
-            --secondary-color: #159895;
-            --accent-color: #57C5B6;
-            --text-color: #0C2D48;
-            --background-color: #F8F9FA;
-        }
-
-        * {
-            margin: 0;
-            padding: 0;
-            box-sizing: border-box;
-        }
-
-        body {
-            font-family: 'Poppins', sans-serif;
-            line-height: 1.6;
-            background-color: var(--background-color);
-            color: var(--text-color);
-        }
-
-        .hero {
-            background: linear-gradient(135deg, var(--primary-color), var(--secondary-color));
-            color: white;
-            text-align: center;
-            padding: 4rem 2rem;
-        }
-
-        .hero h1 {
-            font-size: 3rem;
-            margin-bottom: 1rem;
-            font-weight: 700;
-        }
-
-        .hero p {
-            font-size: 1.2rem;
-            max-width: 700px;
-            margin: 0 auto;
-            opacity: 0.9;
-        }
-
-        .container {
-            width: 90%;
-            max-width: 1200px;
-            margin: 0 auto;
-            padding: 2rem 1rem;
-        }
-
-        .book-section {
-            display: flex;
-            align-items: stretch;
-            background-color: white;
-            border-radius: 15px;
-            box-shadow: 0 10px 30px rgba(0,0,0,0.1);
-            overflow: hidden;
-            margin-top: -100px;
-            z-index: 10;
-            position: relative;
-            margin-bottom: 2rem;
-        }
-
-        .book-cover {
-            flex: 1;
-            position: relative;
-            overflow: hidden;
-            cursor: pointer;
-        }
-
-        .book-cover img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
-            transition: transform 0.3s ease;
-        }
-
-        .book-cover:hover img {
-            transform: scale(1.1);
-        }
-
-        .book-info {
-            flex: 2;
-            padding: 3rem;
-        }
-
-        .book-info h2 {
-            color: var(--primary-color);
-            margin-bottom: 1rem;
-            font-size: 2.2rem;
-        }
-
-        .book-info h3 {
-            color: var(--secondary-color);
-            margin-top: 1.5rem;
-        }
-
-        .cta-button {
-            display: inline-block;
-            background-color: var(--accent-color);
-            color: white;
-            padding: 12px 25px;
-            text-decoration: none;
-            border-radius: 30px;
-            font-weight: 600;
-            margin-top: 20px;
-            transition: all 0.3s ease;
-        }
-
-        .cta-button:hover {
-            background-color: var(--secondary-color);
-            transform: translateY(-3px);
-            box-shadow: 0 4px 15px rgba(0,0,0,0.2);
-        }
-
-        .past-books {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 1rem;
-            justify-content: center;
-        }
-
-        .past-book {
-            width: 200px;
-            text-align: center;
-            cursor: pointer;
-            transition: transform 0.3s ease;
-        }
-
-        .past-book:hover {
-            transform: scale(1.05);
-        }
-
-        .past-book img {
-            width: 100%;
-            height: 300px;
-            object-fit: cover;
-            border-radius: 10px;
-        }
-
-        .modal {
-            display: none;
-            position: fixed;
-            z-index: 1000;
-            left: 0;
-            top: 0;
-            width: 100%;
-            height: 100%;
-            overflow: auto;
-            background-color: rgba(0,0,0,0.7);
-        }
-
-        .modal-content {
-            background-color: white;
-            margin: 10% auto;
-            padding: 20px;
-            border-radius: 10px;
-            width: 80%;
-            max-width: 600px;
-            position: relative;
-        }
-
-        .close {
-            color: #aaa;
-            float: right;
-            font-size: 28px;
-            font-weight: bold;
-            cursor: pointer;
-        }
-
-        .close:hover {
-            color: black;
-        }
-
-        .review {
-            margin-bottom: 1rem;
-            padding: 1rem;
-            background-color: #f4f4f4;
-            border-radius: 5px;
-        }
-
-        .reading-schedule {
-            background-color: #f0f0f0;
-            padding: 1rem;
-            border-radius: 10px;
-            margin-top: 1rem;
-        }
-
-        footer {
-            background-color: var(--text-color);
-            color: white;
-            text-align: center;
-            padding: 2rem;
-            margin-top: 2rem;
-        }
-
-        @media (max-width: 1024px) and (min-width: 769px) {
-            .past-books {
-                flex-wrap: wrap;
-                gap: 1rem;
-                justify-content: center;
-            }
-
-            .past-book {
-                width: calc(50% - 1rem);  /* Largura para 2 colunas com gap */
-                max-width: 250px;
-            }
-        }
-
-        @media (max-width: 768px) {
-            .container {
-                width: 90%;
-            }
-
-            .hero {
-                padding: 2rem 1rem;
-            }
-
-            .hero h1 {
-                font-size: 2.5rem; 
-                word-wrap: break-word;
-                max-width: 100%;
-            }
-        
-            .hero p {
-                font-size: 1rem; 
-                max-width: 100%; 
-                margin: 0 auto; 
-            }
-
-            .book-section {
-                flex-direction: column;
-                margin-top: -50px;
-            }
-
-            .book-cover, .book-info {
-                flex: none;
-                width: 100%;
-            }
-
-            .book-cover:hover img {
-                transform: none;
-            }
-
-            .book-info {
-                padding: 1em;
-                text-align: justify; 
-            }
-
-            .book-info h2 {
-                padding: 0rem;
-                text-align: center;
-            }
-
-            .book-info .cta-button {
-                display: block; 
-                width: fit-content; 
-                margin-left: auto; 
-                margin-right: auto; 
-            }
-
-            .past-book {
-                width: 250px;  /* Aumentei de 200px para 250px */
-            }
-
-            .past-book img {
-                height: 400px;  /* Aumentei de 300px para 400px */
-                object-fit: cover;
-            }
-
-            footer {
-                text-align: center;
-                padding: 0.5rem;
-                margin-top: 2rem;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="hero">
