--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="hero">
         <div class="container">
             <h1>LiteraTeia</h1>
-            <p>Um grupo onde as histórias ganham vida, onde cada página nos transporta para mundos inexplorados e cada discussão nos transforma.</p>
+            <p>Um clube de leitura onde exploramos histórias que desafiam a mente, mergulhamos em universos complexos e discutimos temas profundos, sempre buscando expandir nossa visão do mundo.</p>
         </div>
     </div>
 
