--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
         const bookReviews = {
             'O Lobo da Estepe': [
                 { name: 'Alex', rating: 4, comment: 'É uma experiência muito imersiva na vida do personagem. O autor coerentemente com a personalidade do protagonista, vaga por diversas outras obras de autores famosos da literatura, além de músicos clássicos. Devido à dualidade que enfrenta o Harry Haller, propõe reflexões muito densas sobre as multifacetadas perspectivas que se pode ter de si mesmo e da sociedade. Tem um final muito interessante, algo que me pegou desprevenido, esperei muitas coisas, exceto a conclusão que teve. Valeu a pena ler, pretendo olhar mais obras desse cabra.' },
-                { name: 'Ivan', rating: 3.5, comment: '' },
+                { name: 'Ivan', rating: 3.5, comment: 'Devo admitir que esse livro me pegou de surpresa, quando vi seu título chamativo, não esperava de forma alguma a viagem e a imersão que teria dentro da psiquê de um protagonista. A obra possui uma maneira muito única de transmitir e organizar a história, com alegorias e simbolismos que parecem altamente aleatórios. Que, ao chegar em sua conclusão, deixa tudo muito bem amarrado nessa história de descoberta, misticismo e redenção.' },
                 { name: 'Moises', rating: 5, comment: '' },
                 { name: 'Natal', rating: 3.5, comment: 'Apesar de achar o meio do livro um pouco mais cansativo de ler, fui surpreendido com a leitura no geral. Acompanhado de um grupo dei leitura, acompanhar o personagem desse livro foi uma experiência interessante.' }
             ],
