--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 <p><strong>Data:</strong> 20 de Dezembro de 2024</p>
                 <p><strong>Hora:</strong> 15:30</p>
                 <p><strong>Local:</strong> Discord - Canal Teia Studios - Sala Créu</p>
-                <p><strong>Capítulos:</strong> Capítulo 5</p>
+                <p><strong>Capítulos:</strong> Capítulo 8</p>
                 <p><strong>Meta Atual:</strong> Iniciar Leitura</p>
             </div>
         </div>
@@ -103,7 +103,7 @@
                 <p><strong>Data:</strong> 20 de Dezembro de 2024</p>
                 <p><strong>Hora:</strong> 16:00</p>
                 <p><strong>Local:</strong> Discord - Canal Teia Studios - Sala Quadrinhos</p>
-                <p><strong>Capítulos:</strong> Capítulo 1 e 2</p>
+                <p><strong>Capítulos:</strong> Até capítulo 4</p>
                 <p><strong>Meta Atual:</strong> Iniciar Discussão sobre Arco Narrativo</p>
             </div>
         </div>
