--- a/index.html
+++ b/index.html
@@ -84,11 +84,11 @@
             <h2>Cronograma de Leitura - Meridiano de Sangue</h2>
             <div class="reading-schedule">
                 <h3>Próximo Encontro</h3>
-                <p><strong>Data:</strong> 20 de Dezembro de 2024</p>
-                <p><strong>Hora:</strong> 15:30</p>
+                <p><strong>Data:</strong> Vem ai!</p>
+                <p><strong>Hora:</strong> Em Breve decidem.</p>
                 <p><strong>Local:</strong> Discord - Canal Teia Studios - Sala Créu</p>
-                <p><strong>Capítulos:</strong> Capítulo 8</p>
-                <p><strong>Meta Atual:</strong> Iniciar Leitura</p>
+                <p><strong>Capítulos:</strong> Até Capítulo 12</p>
+                <p><strong>Meta Atual:</strong> Retomar Leitura</p>
             </div>
         </div>
     </div>
@@ -100,10 +100,10 @@
             <h2>Cronograma de Leitura - Watchmen</h2>
             <div class="reading-schedule">
                 <h3>Próximo Encontro</h3>
-                <p><strong>Data:</strong> 20 de Dezembro de 2024</p>
-                <p><strong>Hora:</strong> 16:00</p>
-                <p><strong>Local:</strong> Discord - Canal Teia Studios - Sala Quadrinhos</p>
-                <p><strong>Capítulos:</strong> Até capítulo 4</p>
+                <p><strong>Data:</strong> Vem ai!</p>
+                <p><strong>Hora:</strong> Em Breve decidem.</p>
+                <p><strong>Local:</strong> Discord - Canal Teia Studios - Sala Créu</p>
+                <p><strong>Capítulos:</strong> Até capítulo 7</p>
                 <p><strong>Meta Atual:</strong> Iniciar Discussão sobre Arco Narrativo</p>
             </div>
         </div>
